# test-bare-metal-pico-webserver

./: CMakeLists.txt  FreeRTOSConfig.h  README.md  lwipopts.h  server.c
